--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,5 +8,5 @@ sonar.organization=m1del-1
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 #sonar.sources=.
 
-# Encoding of the source code. Default is default system encoding
+# Encoding of the source code. Default is default system encoding, test push
 #sonar.sourceEncoding=UTF-8
