--- a/.github/workflows/sonarcloud-analysis.yml
+++ b/.github/workflows/sonarcloud-analysis.yml
@@ -19,7 +19,8 @@ jobs:
               uses: SonarSource/sonarcloud-github-c-cpp@v1
             - name: Run build-wrapper
               run: |
-                  build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }}<insert_your_clean_build_command>
+                  rm -rf build # Clean previous build artifacts
+                  build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} make clean && make -j$(nproc) all
             - name: Run sonar-scanner
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
